# coronos-unstable

./: .swp  Makefile  README.md  TODO  configure.ac  coronos.in  crs-archive.s  init_coronos.s  revert.s
doc/: Makefile  coronos.in_test  figs.tex  plasmadefs.tex  syn.tex  tk_numvol.tex  turb.bib
doc/figures/: figoneb.eps  figtwo.eps
idl/pro/cts/: construct_contour.pro  cts.pro  fetch_datafile.pro  fetch_layer.pro  getCoordConvs.pro  getInfixString.pro  getOutputPath.pro  getResString.pro  getSliceRange.pro  getTitle.pro  glb_ext.out  global_q_minmax.pro  global_q_minmax_by_slice.pro  gptb.pro  makeAxes.pro  makeColorBar.pro  makeContourPlot.pro  psb  scan_parameters.pro  set_contour_levels.pro
idl/pro/evsz/: calcGofx.pro  calc_extE.pro  calc_lpm.pro  evsz.pro  fetch_datafile.pro  fetch_layer.pro  fft.pro  getDataOutFile.pro  getEfldIndex.pro  getResString.pro  getSliceRange.pro  global_efld_minmax.pro  jZeroOfX.pro  open_evsz_data_file.pro  plotGofx.pro  run_ave_evsz.pro  scan_parameters.pro
idl/pro/ff_cc/: cross_check.pro  fetch_datafile.pro  fetch_layer.pro  fetch_slices.pro  max_diff.pro  scan_parameters.pro
idl/pro/ff_time_series/: ff_time_series.pro  open_energy_data_file.pro  scan_parameters.pro
idl/pro/ff_tomo/: calc_jz.pro  cfdp.pro  construct_contour.pro  construct_eps_outfile_name.pro  fetch_datafile.pro  fetch_slices.pro  max_q_by_slice.pro  min_q_by_slice.pro  set_levels_by_slice.pro  single_time_contour_tomography_series.pro
idl/pro/glb_ext/: calcKK.pro  calcOJ.pro  fetch_datafile.pro  fetch_layer.pro  getSliceRange.pro  glb_ext.pro  global_q_minmax.pro  global_q_minmax_by_slice.pro  scan_parameters.pro
idl/pro/jstruct/: calc_flt_Jsqr.pro  fetch_datafile.pro  fill_jvox.pro  getColorTables.pro  getInfixString.pro  getOutputPath.pro  getTitle.pro  global_q_minmax.pro  global_q_minmax_by_slice.pro  init_jvox.pro  jMask.pro  jstruct.pro  makeContourPlot.pro  makeVolume.pro  scan_parameters.pro
idl/pro/spec/: getCaseFileString.pro  getDataOutDir.pro  getResString.pro  getSfldIndex.pro  getSfldString.pro  getSpectralIndexDataOutFile.pro  getSpectrumTitle.pro  getSubrunRangeString.pro  global_sfld_minmax.pro  global_sfld_minmax_by_slice.pro  global_sfld_minmax_over_slices.pro  open_evsz_data_file.pro  open_spec_data_file.pro  plotSpVsZ.pro  plotSpectrum.pro  run_ave_spec.pro  setKData.pro  spec.pro
idl/pro/volstruct/: calc_flt_Jsqr.pro  fetch_layer.pro  fill_jvox.pro  getColorTables.pro  getCoordConvs.pro  getInfixString.pro  getOutputPath.pro  getTitle.pro  jMask.pro  makeAxes.pro  volstruct.pro
m4/: ax_compiler_vendor.m4  ax_compiler_version.m4
src/: Makefile  Makefile.am  Makefile.in  cls_canvas.cpp  cls_canvas.hpp  cls_canvas_cuda_ext.cu  cls_canvas_cuda_ext.hpp  cls_fft.cpp  cls_fft.hpp  cls_fft_cuda_ext.cu  cls_fft_cuda_ext.hpp  cls_lcsolve.cpp  cls_lcsolve.hpp  cls_lcsolve_cuda_ext.cu  cls_lcsolve_cuda_ext.hpp  cls_lcsolve_pa_ok.cpp  cls_parameter.cpp  cls_parameter.hpp  cls_parameter_map.cpp  cls_parameter_map.hpp  cls_redhallmhd.cpp  cls_redhallmhd.hpp  cls_redhallmhd_cuda_ext.cu  cls_redhallmhd_cuda_ext.hpp  cls_run_instance.cpp  cls_run_instance.hpp  cls_run_instance_cuda_ext.cu  cls_run_instance_cuda_ext.hpp  cls_stack.cpp  cls_stack.hpp  cls_stack_cuda_ext.cu  cls_stack_cuda_ext.hpp  coronos.cpp  nsp_constants.hpp
src/.deps/: coronos-cls_canvas.Po  coronos-cls_fft.Po  coronos-cls_lcsolve.Po  coronos-cls_parameter.Po  coronos-cls_parameter_map.Po  coronos-cls_redhallmhd.Po  coronos-cls_run_instance.Po  coronos-cls_stack.Po  coronos-coronos.Po
tests/: coronos.in_test_24  coronos.in_test_gauss_rmhd_24  coronos.in_test_pk_inhm  coronos.in_test_pk_rmhd_24  coronos.in_test_recon_rmhd_1  coronos.in_test_recon_rmhd_100
